--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Brought into Incanter, additions made by David Edgar Liebke.
 Now, split back into its own project to support a more rapid development cycle,
 the addition of unit tests & generative testing, expression simplification, etc.
 
+Please don't actually use this until the tests pass.
+
 Licensed under the EPL, see "epl-v10.html"
 
 Copyright 2012 Bryce Nyeggen and David Edgar Liebke
